# chess

./: pyproject.toml
chess/: __init__.py  __main__.py  board.py  castle_state.py  errors.py  move.py  piece.py  square.py
chess/cli/: __init__.py  __main__.py  board.py
chess/engine/: rand.py
chess/engines/: __init__.py  base.py  oyster.py
engine/chess/: __main__.py  board.py  errors.py  piece.py  square.py
tests/: test_parse_san.py
