[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Fyssion <fyssioncodes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
